<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="40dp"
    android:layout_marginEnd="40dp"
    android:orientation="vertical"
    tools:context=".ui.login.LoginActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="50dp"
        android:text="@string/app_name"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="36sp"
        android:textStyle="bold" />


    <EditText
        android:id="@+id/et_mail"
        style="@style/LoginEditTextStyle"
        android:hint="@string/mail" />

    <EditText
        android:id="@+id/et_password"
        style="@style/LoginEditTextStyle"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/btn_login"
        style="@style/LoginButtonStyle"
        android:text="@string/login" />

    <Button
        android:id="@+id/btn_signup"
        style="@style/LoginButtonStyle"
        android:text="@string/signup" />


</LinearLayout>