<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:minWidth="@dimen/dialog_min_width"
    android:orientation="vertical"
    android:padding="@dimen/dialog_padding">

    <TextView
        style="@style/CustomDialogTitleStyle"
        android:text="@string/name" />

    <EditText
        android:id="@+id/et_todo_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/line_spacing" />

    <LinearLayout
        android:id="@+id/ll_select_date_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:orientation="vertical">

        <TextView
            style="@style/CustomDialogTitleStyle"
            android:layout_marginTop="@dimen/line_spacing"
            android:text="@string/select_date_click" />

        <TextView
            android:id="@+id/tv_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:alpha="0.8" />
    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">

        <TextView
            android:id="@+id/tv_cancel"
            style="@style/CustomDialogButtonStyle"
            android:text="@string/cancel" />

        <TextView
            android:id="@+id/tv_add"
            style="@style/CustomDialogButtonStyle"
            android:layout_gravity="end"
            android:text="@string/add" />
    </FrameLayout>

</LinearLayout>