<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:minWidth="@dimen/dialog_min_width"
    android:orientation="vertical"
    android:padding="@dimen/dialog_padding">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/to_do_list_name"
        android:textColor="@color/default_text_color"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/et_todo_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/line_spacing">
        <requestFocus />
    </EditText>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">

        <TextView
            android:id="@+id/tv_cancel"
            style="@style/CustomDialogButtonStyle"
            android:text="@string/cancel" />

        <TextView
            android:id="@+id/tv_add"
            style="@style/CustomDialogButtonStyle"
            android:layout_gravity="end"
            android:text="@string/add" />
    </FrameLayout>

</LinearLayout>